[package]
name = "honorary-fee-position"
version = "0.1.0"
description = "Anchor program for managing honorary DAMM v2 LP positions with quote-only fee distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "honorary_fee_position"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
